atualizado com restante do css e js

--- a/css/home/testimony.css
+++ b/css/home/testimony.css
@@ -13,6 +13,8 @@
 .testimony-conteudo {
   padding: 40px 40px 80px 80px;
   align-self: end;
+  background: url("../../img/dec/bottom-right-p.svg") no-repeat bottom 40px
+    right 40px;
 }
 .testimony-conteudo p {
   font-family: "Merriweather", serif;
@@ -38,6 +40,12 @@
   color: var(--cor-p2);
   position: absolute;
 }
+@media (min-width: 1200px) {
+  .testimony img {
+    max-height: 520px;
+  }
+}
+
 @media (max-width: 800px) {
   .testimony {
     grid-template-columns: 1fr;
