--- a/css/seguros/questions.css
+++ b/css/seguros/questions.css
@@ -13,27 +13,44 @@
   background-color: var(--cor-02);
 }
 
-.questions dt {
+.questions button {
   display: grid;
   grid-template-columns: auto 1fr auto;
   align-items: center;
   gap: 8px;
   cursor: pointer;
+  border: none;
+  background: none;
+  width: 100%;
+  text-align: left;
 }
-.questions dt::before {
+.questions button::before {
   content: "";
   display: inline-block;
   width: 12px;
   height: 8px;
   background-color: var(--cor-p1);
 }
-.questions dt::after {
+.questions button::after {
   content: "";
   display: inline-block;
   width: 14px;
   height: 6px;
   background: url("../../img/icones/seta-abrir.svg");
+  transition: 0.3s;
 }
+.questions button:hover::after,
+.questions button[aria-expanded="true"]::after {
+  transform: rotate(180deg);
+}
+
+.js .questions dd {
+  display: none;
+}
+.js .questions dd.ativo {
+  display: block;
+}
+
 .questions dd {
   padding-left: 20px;
   padding-top: 16px;
