--- a/css/global/01-header.css
+++ b/css/global/01-header.css
@@ -30,7 +30,8 @@
   margin-top: 4px;
   position: absolute;
 }
-.header-menu a:hover:after {
+.header-menu a:hover:after,
+.header-menu a.ativo::after {
   width: 100%;
   transition: 0.3s;
 }
@@ -44,7 +45,8 @@
     padding: 12px 16px;
     border-radius: 4px;
   }
-  .header-menu a:hover {
+  .header-menu a:hover,
+  .header-menu a.ativo {
     background-color: var(--cor-11);
   }
   .header-menu a:after {
