--- a/css/home/introduction.css
+++ b/css/home/introduction.css
@@ -1,5 +1,6 @@
 .introducao-bg {
-  background-color: var(--cor-13);
+  background: var(--cor-13) url("../../img/dec/bottom-left.svg") no-repeat
+    bottom 140px left 20px;
   color: var(--cor-01);
   box-shadow: inset 0 -120px var(--cor-01);
 }
