--- a/css/utilities/components.css
+++ b/css/utilities/components.css
@@ -18,6 +18,8 @@
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   font: 600 1.125rem/1.35 "Poppins", sans-serif;
   max-width: max-content;
+  border: none;
+  cursor: pointer;
 }
 .button-1:hover {
   background: linear-gradient(#ffb60d, #e59317);
@@ -74,6 +76,10 @@
   background-color: var(--cor-12);
   padding-top: 52px;
   padding-bottom: 52px;
+}
+
+.titulo {
+  background: url("../../img/dec/top-right.svg") no-repeat top right 20px;
 }
 
 .titulo p {
