--- a/css/budget/budget.css
+++ b/css/budget/budget.css
@@ -1,5 +1,5 @@
 #orcamento {
-  background: linear-gradient(var(--cor-12) 550px, var(--cor-02) 0px);
+  background: linear-gradient(var(--cor-p2) 550px, var(--cor-02) 0px);
 }
 .orcamento {
   display: grid;
@@ -42,8 +42,8 @@
   pointer-events: none;
 }
 .orcamento-produto label {
-  color: var(--cor-05);
-  background-color: var(--cor-11);
+  color: var(--cor-01);
+  background-color: var(--cor-12);
   padding: 12px 16px;
   border-radius: 4px;
   font: 400 1rem/1.5 "poppins", sans-serif;
@@ -51,11 +51,11 @@
   display: grid;
   grid-template-columns: auto 1fr auto;
   align-items: center;
-  border: 1px solid var(--cor-11);
+  border: 1px solid var(--cor-12);
 }
 .orcamento-produto label:hover {
-  background-color: var(--cor-10);
-  border-color: var(--cor-10);
+  background-color: var(--cor-11);
+  border-color: var(--cor-11);
 }
 .orcamento-produto input:focus + label {
   box-shadow: 0 0 0 2px var(--cor-p1);
@@ -70,7 +70,7 @@
 }
 .orcamento-produto input:checked + label {
   background-color: var(--cor-01);
-  color: var(--cor-12);
+  color: var(--cor-13);
   /* quando o input tiver clicado (checked) qualquer label referente a ele terá essas config */
 }
 .orcamento-produto label::before {
@@ -85,8 +85,8 @@
 }
 
 .orcamento-produto input:checked + label::before {
-  border-color: var(--cor-09);
-  box-shadow: inset 0 0 0 3px var(--cor-01), inset 0 0 0 5px var(--cor-09);
+  border-color: var(--cor-10);
+  box-shadow: inset 0 0 0 3px var(--cor-01), inset 0 0 0 5px var(--cor-10);
 }
 
 .orcamento-produto > * {
@@ -114,7 +114,7 @@
     bottom 20px right 20px;
 }
 
-#bike:checked ~ #orcamento-bike,
+#fone:checked ~ #orcamento-fone,
 #seguro:checked ~ #orcamento-seguro {
   display: grid;
   gap: 20px;
