--- a/css/global/01-header.css
+++ b/css/global/01-header.css
@@ -1,5 +1,5 @@
 .header-bg {
-  background-color: var(--cor-13);
+  background-color: var(--cor-p2);
 }
 .header {
   padding-top: 20px;
@@ -26,7 +26,7 @@
   display: block;
   width: 0px;
   height: 2px;
-  background-color: var(--cor-01);
+  background-color: var(--cor-05);
   margin-top: 4px;
   position: absolute;
 }
@@ -41,13 +41,12 @@
     gap: 20px;
   }
   .header-menu a {
-    background-color: var(--cor-12);
     padding: 12px 16px;
     border-radius: 4px;
   }
   .header-menu a:hover,
   .header-menu a.ativo {
-    background-color: var(--cor-11);
+    background-color: var(--cor-10);
   }
   .header-menu a:after {
     display: none;
@@ -60,5 +59,15 @@
   .header-menu a {
     padding: 8px 12px;
     font-size: 0.875rem;
+  }
+}
+
+@media (max-width: 500px) {
+  .header {
+    display: grid;
+    justify-content: center;
+  }
+  .header .logo {
+    justify-self: center;
   }
 }
