--- a/css/utilities/components.css
+++ b/css/utilities/components.css
@@ -8,21 +8,28 @@
   margin: 0 auto;
 }
 
-.button-1 {
+.button-1,
+.button-2 {
   padding: 16px 32px;
   display: inline-block;
-  background: linear-gradient(#ffbb00, #f2a50c);
-  border-radius: 4px;
-  color: var(--cor-p5);
+  background: linear-gradient(#83985d, #627246);
+  border-radius: 32px;
+  color: var(--cor-01);
   text-transform: uppercase;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
   font: 600 1.125rem/1.35 "Poppins", sans-serif;
   max-width: max-content;
   border: none;
   cursor: pointer;
 }
 .button-1:hover {
-  background: linear-gradient(#ffb60d, #e59317);
+  background: var(--cor-01);
+  color: var(--cor-p3);
+  transition: 0.2s;
+}
+.button-2:hover {
+  background: var(--cor-p2);
+  color: var(--cor-01);
 }
 
 .secundario {
@@ -56,7 +63,7 @@
 }
 .link {
   display: inline-block;
-  color: var(--cor-p1);
+  color: var(--cor-02);
   font: 500 1.5rem/1.5 "poppins", sans-serif;
   text-transform: uppercase;
 }
@@ -68,12 +75,13 @@
   background-color: currentColor;
 }
 .link:hover {
-  color: var(--cor-01);
+  color: var(--cor-11);
 }
 
 /* titulos internos */
 .titulo-bg {
-  background-color: var(--cor-12);
+  /* background: linear-gradient(180deg, #a0b181 0%, #627246 100%); */
+  background-color: var(--cor-p2);
   padding-top: 52px;
   padding-bottom: 52px;
 }
@@ -84,6 +92,7 @@
 
 .titulo p {
   margin-bottom: 4px;
+  color: var(--cor-03);
 }
 @media (max-width: 800px) {
   .titulo-bg {
