--- a/css/home/introduction.css
+++ b/css/home/introduction.css
@@ -55,6 +55,10 @@
     margin-bottom: 20px;
     object-position: center;
   }
+
+  .img-intro {
+    border-radius: 4px 4px 4px 4px !important;
+  }
   .introducao-bg {
     box-shadow: inset 0 -60px var(--cor-01);
   }
